<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:gravity="center"
                android:layout_marginTop="36dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_it_does"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_it_does_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="16dp"/>
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>