<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/title"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_instruction"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/player_one"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/white_circle"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"/>
            <EditText
                android:id="@+id/player1_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/player_two"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/black_circle"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"/>
            <EditText
                android:id="@+id/player2_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"/>
    </LinearLayout>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/decoration"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop" />

</RelativeLayout>