<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/move_instruction"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/moveColor"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:src="@drawable/white_circle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="36dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/player1_name_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="John"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/VS"
                    android:textColor="@color/orange"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/player2_name_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="Tom"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <GridView
            android:id="@+id/board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnWidth="15dp"
            android:horizontalSpacing="0dp"
            android:numColumns="13"
            android:verticalSpacing="0dp">

        </GridView>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/orange"
            android:text="@string/reset" />
    </LinearLayout>

    <ImageView
        android:id="@+id/voice_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/fab_circle"
        android:padding="12dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_mic_black_24dp"/>

</RelativeLayout>